# ephemeral

./: README.md
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  styles.css  types.ts
dashboard/src/data/: mockSession.ts  sessionSource.ts
examples/: DEMO.py  agent_demo.py  agent_demo_v2.py  chatbot.py
landing/: index.html
orchestrator/: .gitignore  main.py  pyproject.toml  requirements.txt
orchestrator/ephemeral/: sessions.py
orchestrator/ephemeral/agents/provisioner/: __init__.py  agent.py  context.py  k2_client.py  prompt.py  tools.py
orchestrator/ephemeral/api/: app.py
orchestrator/ephemeral/docker/: __init__.py  catalog.py  errors.py  events.py  models.py  service.py
orchestrator/ephemeral/mcp/: executor.py  router.py
orchestrator/tests/: test_agent.py  test_catalog.py  test_container_service.py  test_context_window.py  test_k2_client.py  test_router.py  test_tools.py
sdk/: .gitignore  pyproject.toml  server.py  test_local.py
sdk/demo/: app.py
sdk/examples/: basic.py
sdk/src/ephemeral/: __init__.py  __main__.py  client.py  mcp_server.py  tracker.py
