[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ephemeral-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires Docker daemon",
]
