[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ephemeral-ai"
version = "0.1.0"
description = "Minimal-setup telemetry SDK for LLM conversation logs."
requires-python = ">=3.8"
dependencies = ["requests>=2.25", "mcp>=1.0"]

[project.scripts]
ephemeral-mcp = "ephemeral.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
